[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/interface/Lot Panel.gd" type="Script" id=1]
[ext_resource path="res://font/LatoWeb-Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://gfx/CompanyLogos/001Player.png" type="Texture" id=3]

[node name="Lot Panel" type="PanelContainer"]
margin_right = 183.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 176.0
margin_bottom = 147.0

[node name="Lot Id" type="Label" parent="VBoxContainer"]
margin_right = 169.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Lot #1"
autowrap = true

[node name="OccupiedText" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 169.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OccupiedText"]
margin_right = 169.0
margin_bottom = 62.0

[node name="Owner Name" type="Label" parent="VBoxContainer/OccupiedText/HBoxContainer"]
margin_top = 9.0
margin_right = 103.0
margin_bottom = 52.0
hint_tooltip = "Click to select this Company."
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Chicken Rice Nation"
valign = 1
autowrap = true

[node name="Owner Logo" type="TextureRect" parent="VBoxContainer/OccupiedText/HBoxContainer"]
margin_left = 107.0
margin_right = 169.0
margin_bottom = 62.0
hint_tooltip = "Click to select this Company."
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="Stats" type="GridContainer" parent="VBoxContainer/OccupiedText"]
margin_top = 66.0
margin_right = 169.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Customers Label" type="Label" parent="VBoxContainer/OccupiedText/Stats"]
margin_right = 73.0
margin_bottom = 14.0
hint_tooltip = "Malls have a fixed number of Customers. Each Customer will patronize a random Outlet each month, causing the
Company who owns that Outlet to earn Sales Income. A Customer is more likely to patronize a Company with
high Brand Strength."
mouse_filter = 0
text = "Customers:"

[node name="Customers Value" type="Label" parent="VBoxContainer/OccupiedText/Stats"]
margin_left = 77.0
margin_right = 169.0
margin_bottom = 14.0
hint_tooltip = "Malls have a fixed number of Customers. Each Customer will patronize a random Outlet each month, causing the
Company who owns that Outlet to earn Sales Income. A Customer is more likely to patronize a Company with
high Brand Strength."
mouse_filter = 0
text = "10/10"

[node name="Net Worth Label" type="Label" parent="VBoxContainer/OccupiedText/Stats"]
margin_top = 18.0
margin_right = 73.0
margin_bottom = 32.0
hint_tooltip = "The value that this Company would be willing to sell this Outlet for."
mouse_filter = 0
text = "Net Worth:"

[node name="Net Worth Value" type="Label" parent="VBoxContainer/OccupiedText/Stats"]
margin_left = 77.0
margin_top = 18.0
margin_right = 169.0
margin_bottom = 32.0
hint_tooltip = "The value that this Company would be willing to sell this Outlet for."
mouse_filter = 0
text = "$1,000,000.00"

[node name="BuyoutButton" type="Button" parent="VBoxContainer/OccupiedText"]
margin_top = 102.0
margin_right = 169.0
margin_bottom = 122.0
text = "Buyout ($5,000,000.00)"

[node name="UnoccupiedText" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 169.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="No Outlet" type="Label" parent="VBoxContainer/UnoccupiedText"]
margin_right = 169.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Vacant"
align = 1
autowrap = true

[node name="BuyLotButton" type="Button" parent="VBoxContainer/UnoccupiedText"]
margin_top = 18.0
margin_right = 169.0
margin_bottom = 38.0
text = "Buy Lot ($10,000.00)"
[connection signal="gui_input" from="VBoxContainer/OccupiedText/HBoxContainer/Owner Name" to="." method="_on_Owner_Name_gui_input"]
[connection signal="gui_input" from="VBoxContainer/OccupiedText/HBoxContainer/Owner Logo" to="." method="_on_Owner_Name_gui_input"]
[connection signal="pressed" from="VBoxContainer/OccupiedText/BuyoutButton" to="." method="_on_BuyoutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/UnoccupiedText/BuyLotButton" to="." method="_on_BuyLotButton_pressed"]
